<resources>
    <string name="app_name">دليل الطالب</string>
    <string name="titleNave">Title</string>
    <string name="institute_name">المعهد العالي للمهن الشاملة _ قمينس</string>


    <string name="logo_institute">Logo of the Institute</string>

    <string name="About_the_Institute">نبذه عن المعهد</string>
    <string name="Chain_of_Directors">سلسلة مدراء المعهد</string>


    <string name="Office_of_Scientific_Affairs">مكتب الشئون العلميه</string>
    <string name="Scientific_sections">الاقسام العلميه</string>
    <string name="Research_Department_Curriculum_Development">قسم البحث وتطوير المناهج</string>
    <string name="Technical_Certifications_Section">قسم الشؤون الفنيه (معامل و ورش)</string>
    <string name="Factor">معامل</string>
    <string name="Workshops">ورش</string>
    <string name="library">المكتبه</string>


    <string name="General_Registrar">المسجل العام</string>
    <string name="Study_and_Examinations">الدراسه والامتحانات</string>
    <string name="Registration_and_Admission_Section">قسم التسجيل والقبول</string>
    <string name="Graduates_Department">قسم الخريجين</string>
    <string name="Department_of_Student_Affairs_Activity">قسم الشؤون الطلبة النشاط</string>


    <string name="about_app">عن التطبيق</string>
    <string name="privacy_policy">سياسة الخصوصيه</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="laws">المستندات والقوانين للطالب</string>
    <string name="decuments">المستندات المطلوبه</string>
    <string name="laws_student">اللوائح والقوانين للطالب</string>

</resources>
