<!--suppress ALL -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/nav_width"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:elevation="@dimen/nav_elevation"
    tools:context="com.delivery.arish.arishdelivery.ui.Main.MainActivity">

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <include
            layout="@layout/nav_header_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_item_include_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/lin1"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/txt_Institute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/About_the_Institute" />

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/txt_Directors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_below="@+id/v1"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:text="@string/Chain_of_Directors" />

            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"

                android:background="@color/grey" />


            <TextView
                android:id="@+id/txt_Affairs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:text="@string/Office_of_Scientific_Affairs" />



            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_Scientific"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/v2"
                    android:textColor="@color/black"
                    android:layout_margin="4dp"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_alignParentEnd="true"
                    android:text="@string/Scientific_sections" />
            <TextView
                android:id="@+id/txt_Curriculum_Development"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:text="@string/Research_Department_Curriculum_Development" />
            <TextView
                android:id="@+id/txt_Certifications_Section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:layout_alignParentEnd="true"
                android:text="@string/Technical_Certifications_Section" />
            <TextView
                android:id="@+id/txt_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:layout_alignParentEnd="true"
                android:text="@string/library" />

            </LinearLayout>
            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grey" />


            <TextView
                android:id="@+id/txt_General_Registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="end"
                android:layout_alignParentEnd="true"
                android:text="@string/General_Registrar" />

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:orientation="vertical">
            <TextView
                android:id="@+id/txt_Study_and_Examinations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:textStyle="italic"
                android:layout_alignParentEnd="true"
                android:text="@string/Study_and_Examinations" />
            <TextView
                android:id="@+id/txt_Admission_Section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"
                android:textStyle="italic"
                android:text="@string/Registration_and_Admission_Section" />
            <TextView
                android:id="@+id/txt_Graduates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:layout_alignParentEnd="true"
                android:text="@string/Graduates_Department" />
            <TextView
                android:id="@+id/txt_Student_Affairs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:layout_alignParentEnd="true"
                android:text="@string/Department_of_Student_Affairs_Activity" />
            </LinearLayout>


            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grey" />


            <TextView
                android:id="@+id/txt_about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:text="@string/about_app" />




        </LinearLayout>
    </LinearLayout>

</ScrollView>